--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@mui/material": "^6.4.3",
     "@mysten/sui": "^1.21.1",
     "@react-oauth/google": "^0.12.1",
